chore: Fix word spacing

--- a/spa/src/styles/base/_base.scss
+++ b/spa/src/styles/base/_base.scss
@@ -32,6 +32,7 @@ body {
   line-height: 1.7;
   color: $text-black-primary;
   background-color: $background-color-secondary;
+  word-spacing: .1rem;
 
   @include respond(tab-port) {
     padding: 0;
